.kubernetes/rendered/truth-hitl/all.yaml
---
# Source: holiday-peak-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truth-hitl-truth-hitl
  namespace: holiday-peak-agents
  labels:
    app: truth-hitl
spec:
  selector:
    app: truth-hitl
    # When canary is disabled, select all pods
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
---
# Source: holiday-peak-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truth-hitl-truth-hitl
  namespace: holiday-peak-agents
  labels:
    app: truth-hitl
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: truth-hitl
  template:
    metadata:
      labels:
        app: truth-hitl
        canary: "false"
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: truth-hitl
      nodeSelector:
        agentpool: agents
      tolerations:
        - effect: NoSchedule
          key: workload
          operator: Equal
          value: agents
      containers:
        - name: truth-hitl
          image: "holidaypeakhub405devacr.azurecr.io/truth-hitl@sha256:c195f69d7f296c0961fcc67d6dad28cf2f524fae9ed92464cde48938673813ed"
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
---
# Source: holiday-peak-service/templates/agc-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truth-hitl-truth-hitl-agc
  namespace: holiday-peak-agents
  labels:
    app: truth-hitl
spec:
  parentRefs:
    - name: "holiday-peak-agc"
      namespace: "holiday-peak-agents"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/truth-hitl"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: truth-hitl-truth-hitl
          port: 80
